--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "exorcist": "^1.0.1",
     "jake": "^8.0.15",
     "make-dir": "^1.2.0",
-    "rimraf": "^2.6.2",
-    "watchify": "^3.10.0"
+    "rimraf": "^2.6.2"
   }
 }
