:wrench: Add .npmignore and modify package.json for publishing.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "author": "Kanon Kakuno <yadex205@outlook.jp>",
   "license": "MIT",
+  "files": [
+    "/dist"
+  ],
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
