:wrench: Add respository informations.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
   "files": [
     "/dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yadex205/yanvas.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yadex205/yanvas/issues"
+  },
+  "homepage": "https://github.com/yadex205/yanvas#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
