:wrench: Install prettier and set config

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/yadex205/yanvas/issues"
   },
-  "homepage": "https://github.com/yadex205/yanvas#readme"
+  "homepage": "https://github.com/yadex205/yanvas#readme",
+  "devDependencies": {
+    "prettier": "^2.5.1"
+  }
 }
