--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/yadex205/yanvas/issues"
   },
   "homepage": "https://github.com/yadex205/yanvas#readme",
+  "type": "module",
   "devDependencies": {
     "prettier": "^2.5.1"
   }
