--- a/package.json
+++ b/package.json
@@ -2,14 +2,8 @@
   "name": "yanvas",
   "version": "1.3.1",
   "description": "A graphics library for easy WebGLing",
-  "scripts": {
-    "build": "jake build --trace"
-  },
   "author": "Kanon Kakuno <yadex205@outlook.jp>",
   "license": "MIT",
-  "files": [
-    "/dist"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yadex205/yanvas.git"
@@ -19,7 +13,21 @@
   },
   "homepage": "https://github.com/yadex205/yanvas#readme",
   "type": "module",
+  "files": [
+    "/dist"
+  ],
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/gl": "^4.1.0",
+    "@types/jest": "^27.4.0",
+    "babel-jest": "^27.4.6",
+    "gl": "^5.0.0",
+    "jest": "^27.4.7",
     "prettier": "^2.5.1"
   }
 }
